<resources>
    <string name="app_name">Vocabulary Master</string>
    <string name="known_words">כלול מילים שאני יודע</string>
    <string name="half_know_word">כלול מילים שאני יודע חלקית</string>
    <string name="new_words">כלול מילים חדשות</string>
    <string name="start_game">התחל למידה</string>
    <string name="choose">אנא בחר את תצורת הלמידה</string>
    <string name="game_preferences">ברוכים הבאים ל Vocabulary Master</string>
    <string name="personal_area">מעקב למידה</string>
    <string name="sad">sad</string>
    <string name="happy">happy</string>
    <string name="word">word</string>
    <string name="show">חשוף תוצאה</string>
    <string name="half_know">ידעתי חלקית</string>
    <string name="unknow">לא ידעתי</string>
    <string name="arrow">arrow</string>
    <string name="know">ידעתי</string>
    <string name="end_game">סיום למידה</string>
    <string name="word_header">מילה מספר</string>
    <string name="translation">פירוש</string>
    <string name="prompt_email">שם משתמש</string>
    <string name="prompt_password">סיסמא</string>
    <string name="action_sign_in">כניסה</string>
    <string name="action_sign_in_short">כניסה</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="outcome">תוצאות סיום יחידת הלימוד</string>
    <string name="button">הרשמה</string>
    <string name="button2">Button</string>
    <string name="amount">כמות</string>
    <string name="heeder_last">נתוני הלמידה האחרונים שלך</string>
    <string name="header_current">נתוני הלמידה הנוכחית שלך</string>
    <string name="move_to">מעבר לתפריט הראשי</string>
    <string name="know_words_header">מילים ידועות</string>
    <string name="unknow_word_header">מילים לא ידועות</string>
    <string name="half_know_words_header">מילים ידועות חלקית</string>
    <string name="header_personal_area">בחר את יחידת הלימוד הרצויה שעליה תרצה לקבל מידע</string>
    <string name="back_to_main_menu">חזרה לתפריט הראשי</string>
    <string name="start_from_text">המשך מהמקום בו עצרת</string>
    <string name="todo">TODO</string>
    <string name="vocabuary_master">Vocabulary Master</string>
    <string name="loading_view">TODO</string>
    <string name="loading_text">טוען</string>
</resources>
