<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="253dp"
        android:layout_height="44dp"
        android:fontFamily="casual"
        android:text="@string/choose"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="276dp"
        android:layout_height="105dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/game_preferences"
        android:textColor="@android:color/background_light"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:background="@drawable/button_design"
        android:text="@string/start_game"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="casual"
        android:lines="@integer/google_play_services_version"
        android:text="@string/known_words"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="18sp"
        app:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <CheckBox
        android:id="@+id/start_from_last_position"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="casual"
        android:text="@string/start_from_text"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="18sp"
        app:buttonTint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <Button
        android:id="@+id/learn_state"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/ic_subdirectory_arrow_left_black_24dp"
        android:text="@string/personal_area"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:scrollbarSize="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

</androidx.constraintlayout.widget.ConstraintLayout>